# lumora

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: daemon.rs  fileops.rs  indexer.rs  languages.rs  main.rs  mcp.rs  model.rs  parser.rs  paths.rs  storage.rs
src/queries/: bash.scm  c.scm  cpp.scm  csharp.scm  css.scm  elixir.scm  go.scm  haskell.scm  html.scm  java.scm  javascript.scm  json.scm  kotlin.scm  lua.scm  python.scm  ruby.scm  rust.scm  scala.scm  swift.scm  toml.scm  typescript.scm  yaml.scm
