[package]
name = "lumora"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Offline semantic code graph, watcher daemon, and MCP server for local repositories"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/quintant/lumora"
homepage = "https://github.com/quintant/lumora"
documentation = "https://docs.rs/lumora"
keywords = ["code-intelligence", "mcp", "tree-sitter", "code-search", "cli"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
exclude = [
    ".codex/**",
    ".github/**",
    ".lumora/**",
    ".lume/**",
    "target/**",
]

[[bin]]
name = "lumora"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
notify = "6.1"
