[package]
name = "lumora"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
description = "Local semantic code graph and MCP server for AI coding agents"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/quintant/lumora"
homepage = "https://github.com/quintant/lumora"
documentation = "https://docs.rs/lumora"
keywords = ["mcp", "code-graph", "semantic-search", "ai-agents", "code-intelligence"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
exclude = [
    ".codex/**",
    ".github/**",
    ".lumora/**",
    ".lume/**",
    "target/**",
]

[[bin]]
name = "lumora"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
regex = "1"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-c-sharp = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-bash = "0.21"
tree-sitter-css = "0.21"
tree-sitter-html = "0.20"
tree-sitter-json = "0.21"
tree-sitter-toml-ng = "0.6"
tree-sitter-yaml = "0.6"
tree-sitter-scala = "0.22"
tree-sitter-kotlin = "0.3"
tree-sitter-lua = "0.1"
tree-sitter-elixir = "0.2"
tree-sitter-haskell = "0.21"
tree-sitter-swift = "0.5"
notify = "6.1"

[dev-dependencies]
tempfile = "3.10"
